zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__replacing_existing_wide_characters.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot

---
00 (C): ┌ Remixed by BEMANI Sound Team 'TAG feat. PON' - 新宝島 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
01 (C): │0:14/1:59                                                                                                      ──┤ 新宝島 ├──                                                                                                       Vol: 39%│
02 (C): │[playing]                                                      Remixed by BEMANI Sound Team 'TAG feat. PON' - beatmania IIDX 28 BISTROVER Original Soundtrack (Disc2) (2021)                                                        [------]│
03 (C): │────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
04 (C): │                                                                                   Playlist (2035 items, length: 3 days, 4 hours, 4 minutes, 28 seconds)                                                                                    │
05 (C): │────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
06 (C): │Artist                                         Track Title                                                                                                                 Album                                                     Time   │
07 (C): │────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
08 (C): │Expander                                       18    Honey Trap                                                                                                            beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:08   │
09 (C): │ARM×狐夢想 feat. 山本椛                        19    ディッシュウォッシャー◎彡おいわちゃん                                                                                 beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      1:57   │
10 (C): │Gram                                           20    GuNGNiR                                                                                                               beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:11   │
11 (C): │maras k(marasy+kors k)                         21    Piano Samurai                                                                                                         beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:09   │
12 (C): │P*Light                                        22    HAPPY★RUSH                                                                                                            beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:05   │
13 (C): │猫叉Master                                     23    月雪に舞う華のように                                                                                                  beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:19   │
14 (C): │DJ TOTTO                                       24    DORNWALD ～Junge～                                                                                                    beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:14   │
15 (C): │USAO                                           25    BroGamer                                                                                                              beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:12   │
16 (C): │SOUND HOLIC feat. Nana Takahashi & 709sec.     26    FUZIN RIZIN                                                                                                           beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:08   │
17 (C): │青龍                                           27    AO-∞                                                                                                                  beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:08   │
18 (C): │Manabu Namiki                                  28    Shoot'Em All                                                                                                          beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:21   │
19 (C): │Eagle                                          29    Caterpillar                                                                                                           beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:06   │
20 (C): │Dirty Androids                                 30    Egret and Willow                                                                                                      beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:14   │
21 (C): │DJ CHUCKY feat. Jonjo                          31    Warrior                                                                                                               beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:07   │
22 (C): │DJ Noriken                                     32    Summerlights(IIDX Edition)                                                                                            beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:05   │
23 (C): │TOMOSUKE                                       33    Macuilxochitl                                                                                                         beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      1:50   │
24 (C): │dj Hellix                                      34    Quakes                                                                                                                beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      1:59   │
25 (C): │神楽                                           35    Mare Nectaris                                                                                                         beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:11   │
26 (C): │beatnation Records                             01    crew                                                                                                                  beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:23   │
27 (C): │kors k vs L.E.D.-G                             02    Venom                                                                                                                 beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:10   │
28 (C): │kors k vs Sota Fujimori                        03    Cyber True Color                                                                                                      beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:06   │
29 (C): │あべにゅうぷろじぇくと feat. 佐倉紗織 produced 04    恋はどう？モロ◎波動OK☆方程式!!                                                                                        beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      1:55   │
30 (C): │Remo-con                                       05    Vermilion                                                                                                             beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      1:38   │
31 (C): │猫叉Master+                                    06    Lost wing at.0                                                                                                        beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:08   │
32 (C): │DJ TOTTO                                       07    童話回廊                                                                                                              beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      1:55   │
33 (C): │Morrigan feat. リリィ                          08    Apocalypse                                                                                                            beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:28   │
34 (C): │kors k                                         09    Rave Cannon                                                                                                           beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:09   │
35 (C): │かめりあ                                       10    yamabiko (SINOBUZ Edition)                                                                                            beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:09   │
36 (C): │HuΣeR                                          11    ECHIDNA                                                                                                               beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:03   │
37 (C): │Hommarju                                       12    Beat Juggling Mix                                                                                                     beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:02   │
38 (C): │dj TAKA                                        13    RAIN                                                                                                                  beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      1:59   │
39 (C): │L.E.D.                                         14    INVISIBLE STRIX                                                                                                       beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:11   │
40 (C): │金獅子 vs 麒麟 feat. 獏                        15    Snakey Kung-fu                                                                                                        beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:15   │
41 (C): │猫叉Master vs HuΣeR                            16    刃図羅                                                                                                                beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      2:15   │
42 (C): │DJ TOTTO                                       17    DORNWALD ～Der Junge im Käfig～                                                                                       beatmania IIDX 25 CANNON BALLERS ORIGINAL SOUNDTRACK      5:19   │
43 (C): │===========================>────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
44 (C): │                                                                                                                                                                                                                                            │
45 (C): │                                                                                                                                                                                                                                            │
46 (C): │                                                                                                                                                                                                                                            │
47 (C): └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

