zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__resize_tab_with_floating_panes.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 1544
expression: snapshot
---
00 (C): ┌ Pane #1 ─────────────────────────────────────────────────────────────────────────────────────────┐                     
01 (C): │                                                                                                  │                     
02 (C): │                                                                                                  │                     
03 (C): │                        ┌ Pane #2 ───────────────────────── SCROLL:  0/1 ┐                        │                     
04 (C): │                        │                                                │                        │                     
05 (C): │                        │                                                │ ┐                      │                     
06 (C): │                        │                   I am scratch terminal        │ │                      │                     
07 (C): │                        └────────────────────────────────────────────────┘E│                      │                     
08 (C): │                          │EEEEEEEEEE                                      │                      │                     
09 (C): └──────────────────────────└────────────────────────────────────────────────┘──────────────────────┘                     
10 (C):                                                                                                                          
11 (C):                                                                                                                          
12 (C):                                                                                                                          
13 (C):                                                                                                                          
14 (C):                                                                                                                          
15 (C):                                                                                                                          
16 (C):                                                                                                                          
17 (C):                                                                                                                          
18 (C):                                                                                                                          
19 (C):                                                                                                                          

