zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__resize_tiled_then_move_floating_sequence.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: "format!(\"{}\", snapshot)"
---
00 (C): ┌ Pane #1 ───────────────────────────────────────────────────────────┐┌ Pane #2 ────────────────────────────────────────┐
01 (C): │Tiled Left                                                          ││Tiled Right                                      │
02 (C): │                                                                    ││                                                 │
03 (C): │                                                                    ││                                                 │
04 (C): │                                                                    ││                                                 │
05 (C): │                                                                    ││                                                 │
06 (C): │                                                                    ││                                                 │
07 (C): │                                                                    ││                                                 │
08 (C): │                                       ┌ Pane #3 ──────────────────────────────────────── PIN [ ] ┐                    │
09 (C): │                                       │Floating                                                  │                    │
10 (C): │                                       │                                                          │                    │
11 (C): │                                       │                                                          │                    │
12 (C): │                                       │                                                          │                    │
13 (C): │                                       │                                                          │                    │
14 (C): │                                       │                                                          │                    │
15 (C): │                                       │                                                          │                    │
16 (C): │                                       │                                                          │                    │
17 (C): │                                       └──────────────────────────────────────────────────────────┘                    │
18 (C): │                                                                    ││                                                 │
19 (C): └────────────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────┘
