zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__save_cursor_position_across_resizes.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 1153
expression: snapshot
---
00 (C): ┌ Pane #1 ─────────────────────────────────────────────────────────────────────────── SCROLL:  0/4 ┐
01 (C): │                                       Let's save the cursor position here this overwrote me!tten │
02 (C): └──────────────────────────────────────────────────────────────────────────────────────────────────┘
03 (C):                                                                                                     
04 (C):                                                                                                     

